6919638: CMS: ExplicitGCInvokesConcurrent misinteracts with gc locker

GC-locker induced concurrent full gc should be asynchronous; policy now controlled by a separate flag, which defaults to false.

Reviewed-by: jmasa